components/bamoe/services/task-console/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: task-console
    middleware: bamoe
  name: task-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-console
  template:
    metadata:
      labels:
        app: task-console
    spec:
      containers:
        - name: bamoe-task-console
          image: quay.io/bamoe/task-console:9.1.0-ibm-0001
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
