components/bamoe/services/task-console/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: task-console
  name: task-console
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector:
    app: task-console
