components/bamoe/services/task-console/task-console-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: task-console
  name: task-console
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: task-console
