components/bamoe/services/task-console/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: task-console-route
  namespace: app-bamoe-services
  labels:
    app.kubernetes.io/instance: task-console
spec:
  to:
    kind: Service
    name: task-console
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
