components/bamoe/services/task-console/task-console-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: task-console-ingress
  namespace: bamoe-app
  labels:
    app.kubernetes.io/component: task-console
    app.kubernetes.io/instance: task-console
    app.kubernetes.io/name: task-console
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
spec:
  ingressClassName: public-iks-k8s-nginx
  rules:
    - host: task-console.bamoe-canvas-3cd0ec11030dfa215f262137faf739f1-0000.eu-gb.containers.appdomain.cloud
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: task-console
                port:
                  name: http
